#991 fixed workspace bean to handle validate and upload action